tests/expectations/compiler/core/algorithms/ecdsa_verify_fail.out
Error [ETYC0372117]: Expected a [u8; 65] but type `[u8; 64]` was found.
    --> compiler-test:34:45
     |
  34 |         let v1: bool = ECDSA::verify_digest(sig_wrong_size, addr_wrong_size_2, digest_wrong_size);
     |                                             ^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 65] but type `u64` was found.
    --> compiler-test:37:48
     |
  37 |         let v2: bool = ECDSA::verify_keccak256(sig_wrong_type, addr_wrong_size_2, msg);
     |                                                ^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 33] but type `[u8; 20]` was found.
    --> compiler-test:40:58
     |
  40 |         let v3: bool = ECDSA::verify_digest(sig_correct, addr_wrong_size_1, msg);
     |                                                          ^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 20] but type `[u8; 33]` was found.
    --> compiler-test:43:62
     |
  43 |         let v4: bool = ECDSA::verify_digest_eth(sig_correct, addr_wrong_size_2, msg);
     |                                                              ^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected type `u8` but type `u32` was found.
    --> compiler-test:46:60
     |
  46 |         let v5: bool = ECDSA::verify_sha3_256(sig_correct, addr_wrong_elem, msg);
     |                                                            ^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 20] but type `[u8; 33]` was found.
    --> compiler-test:49:65
     |
  49 |         let v6: bool = ECDSA::verify_keccak256_eth(sig_correct, addr_wrong_size_2, msg);
     |                                                                 ^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 33] but type `[u8; 20]` was found.
    --> compiler-test:52:60
     |
  52 |         let v7: bool = ECDSA::verify_sha3_512(sig_correct, addr_wrong_size_1, msg);
     |                                                            ^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 65] but type `[u8; 64]` was found.
    --> compiler-test:55:48
     |
  55 |         let v8: bool = ECDSA::verify_keccak384(sig_wrong_size, addr_wrong_size_1, msg);
     |                                                ^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 32] but type `[u8; 31]` was found.
    --> compiler-test:58:77
     |
  58 |         let v9: bool = ECDSA::verify_digest(sig_correct, addr_wrong_size_2, digest_wrong_size);
     |                                                                             ^^^^^^^^^^^^^^^^^
Error [ETYC0372117]: Expected a [u8; 32] but type `[u8; 31]` was found.
    --> compiler-test:61:82
     |
  61 |         let v10: bool = ECDSA::verify_digest_eth(sig_correct, addr_wrong_size_1, digest_wrong_size);
     |                                                                                  ^^^^^^^^^^^^^^^^^
